--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <main class="main-body">
         <div class="container">
             <div class="row">
-
                 <div class="col s12 center-align">
                     <h1 id="heading">Welcome to SIT 725 Week 3</h1>
                     <p class="flow-text">Task 3.2P</p>
@@ -68,17 +67,18 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input placeholder="Placeholder" id="first_name" type="text" class="validate"> <label
-                                for="first_name">First Name</label>
+                            <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                            <label for="first_name">First Name</label>
                         </div>
-                        <div class="input-field col 56">
-                            <input id="last_name" type="text" class="validate"> <label for="last_name">Last Name</label>
+                        <div class="input-field col s6">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Last Name</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="password" type="password" class="validate"> <label
-                                for="password">Password</label>
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Password</label>
                         </div>
                     </div>
                     <div class="row">
@@ -97,10 +97,11 @@
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+30JU5yEx1q6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 
 </html>
